Fix image layout bug in staff home page

--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,6 @@ footer {
   margin: auto;
 }
 .imageBanner{
-  width: auto;
   height: 16rem ;
   display: block;
   margin: auto;
